CodeTriggerExtBaru/incl/Wd-dask64.h


typedef short           I16;

typedef unsigned short  U16;

typedef unsigned long   U32;

/*---------------------------------------------------------------------------*/
//calibration
I16 __stdcall WD_AD_Auto_Calibration_ALL(U16 wCardNumber);

I16 __stdcall WD_EEPROM_CAL_Constant_Update(U16 wCardNumber, U16 bank);

I16 __stdcall WD_Load_CAL_Data(U16 wCardNumber, U16 bank);

I16 __stdcall WD_Get_Default_Load_Area (U16 wCardNumber);

I16 __stdcall WD_Set_Default_Load_Area(U16 wCardNumber, U16 bank);

/*---------------------------------------------------------------------------*/
//DIO
I16 __stdcall WD_DI_ReadLine (U16 CardNumber, U16 Port, U16 Line, U16 *State);

I16 __stdcall WD_DI_ReadPort (U16 CardNumber, U16 Port, U32 *Value);

/*---------------------------------------------------------------------------*/
I16 __stdcall WD_DO_WriteLine (U16 CardNumber, U16 Port, U16 Line, U16 Value);

I16 __stdcall WD_DO_WritePort (U16 CardNumber, U16 Port, U32 Value);

I16 __stdcall WD_DO_ReadLine (U16 CardNumber, U16 Port, U16 Line, U16 *Value);

I16 __stdcall WD_DO_ReadPort (U16 CardNumber, U16 Port, U32 *Value);

/*---------------------------------------------------------------------------*/
I16 __stdcall WD_DIO_PortConfig (U16 CardNumber, U16 Port, U16 mode, U16 Direction);

I16 __stdcall WD_DIO_LineConfig (U16 CardNumber, U16 Port, U32 Line, U16 Direction);

I16 __stdcall WD_DIO_LinesConfig (U16 CardNumber, U16 Port, U16 mode, U32 Linesdirmap);