CodeTriggerExtBaru/incl/Wd-dask64.cs


	[DllImport("WD-Dask64.dll")]
	public static extern short WD_AD_Auto_Calibration_ALL(ushort wCardNumber);
	[DllImport("WD-Dask64.dll")]
	public static extern short WD_EEPROM_CAL_Constant_Update(ushort wCardNumber, ushort bank);
	[DllImport("WD-Dask64.dll")]
	public static extern short WD_Load_CAL_Data(ushort wCardNumber, ushort bank);
	[DllImport("WD-Dask64.dll")]
	public static extern short WD_Set_Default_Load_Area(ushort wCardNumber, ushort bank);
	[DllImport("WD-Dask64.dll")]
	public static extern short WD_Get_Default_Load_Area(ushort wCardNumber);	
	/*---------------------------------------------------------------------------*/
	[DllImport("WD-Dask64.dll")]
	public static extern short WD_DI_ReadLine (ushort CardNumber, ushort Port, ushort Line, out ushort State);
	[DllImport("WD-Dask64.dll")]
	public static extern short WD_DI_ReadPort (ushort CardNumber, ushort Port, out uint Value);
	/*---------------------------------------------------------------------------*/
	[DllImport("WD-Dask64.dll")]
	public static extern short WD_DO_WriteLine (ushort CardNumber, ushort Port, ushort Line, ushort Value);
	[DllImport("WD-Dask64.dll")]
	public static extern short WD_DO_WritePort (ushort CardNumber, ushort Port, uint Value);
	[DllImport("WD-Dask64.dll")]
	public static extern short WD_DO_ReadLine (ushort CardNumber, ushort Port, ushort Line, out ushort Value);
	[DllImport("WD-Dask64.dll")]
	public static extern short WD_DO_ReadPort (ushort CardNumber, ushort Port, out uint Value);
	/*---------------------------------------------------------------------------*/
	[DllImport("WD-Dask64.dll")]
	public static extern short WD_DIO_PortConfig (ushort CardNumber, ushort Port, ushort mode, ushort Direction);
	[DllImport("WD-Dask64.dll")]	
	public static extern short WD_DIO_LineConfig (ushort CardNumber, ushort Port, uint Line, ushort Direction);
	[DllImport("WD-Dask64.dll")]	
	public static extern short WD_DIO_LinesConfig (ushort CardNumber, ushort Port, ushort mode, uint Linesdirmap);			
	
	//low level APIs
	[DllImport("WD-Dask64.dll")]
	public static extern void WD_WriteDWord(ushort wCardNumber, uint offset, uint data);
	[DllImport("WD-Dask64.dll")]
	public static extern uint WD_ReadDWord(ushort wCardNumber, uint offset);	
}